fix button flicker

--- a/src/elements/Button/Button.module.css
+++ b/src/elements/Button/Button.module.css
@@ -215,7 +215,6 @@
 
   &.disablePadding {
     padding: 0;
-    border: 0;
   }
 
   &:not([disabled]) {
